--- a/styles/globals.css
+++ b/styles/globals.css
@@ -161,7 +161,7 @@ html main .home {
         html main .home h1 {
   font-weight: lighter;
   margin: 8vh 0px 0px 0px;
-  font-size: 7vw;
+  font-size: 4rem;
   color: #e2e2e2;
   opacity: 1;
 }
@@ -194,7 +194,7 @@ html main .home .container p {
   display: flex;
   -ms-flex-negative: 2;
       flex-shrink: 2;
-  font-size: 8rem;
+  font-size: 1rem;
 }
 
 html main .home .presaveLink {
@@ -203,6 +203,7 @@ html main .home .presaveLink {
   font-size: 1.5rem;
   text-decoration: none;
   color: #A6A486;
+  text-decoration: underline;
 }
 
 html main .home .presaveLink:hover {
@@ -267,7 +268,7 @@ html main .live {
 html main .live h1 {
   width: 100wv;
   font-weight: 400;
-  font-size: 5vw
+  font-size: 2rem;
 }
 
 html main .live #showContainer {
@@ -304,7 +305,7 @@ html main .live #showContainer .showDetails .show table td {
 }
 
 html main .live img {
-  max-width: 40vw;
+  max-width: 50vw;
   margin: 4vw;
   -webkit-box-shadow: 1px 1px 1px black;
           box-shadow: 1px 1px 1px black;
@@ -529,7 +530,7 @@ html main .footer form button:hover {
     display: flex;
     -ms-flex-negative: 5;
         flex-shrink: 5;
-    font-size: 10vw;
+    font-size: 1rem;
     font-weight: 500;
     margin-bottom: 0%;
   }
@@ -629,7 +630,7 @@ html main .footer form button:hover {
     width: 400px;
   }
   main .live img {
-    max-width: 80vw;
+    width: 80vw;
     margin: 0;
     -webkit-box-shadow: 1px 1px 1px black;
             box-shadow: 1px 1px 1px black;
