--- a/styles/globals.css
+++ b/styles/globals.css
@@ -305,7 +305,7 @@ html main .live #showContainer .showDetails .show table {
 
 html main .live #showContainer .showDetails .show table td {
   width: 400px;
-  font-size: 1em;
+  font-size: 1rem;
 }
 
 html main .live img {
