--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -1,22 +1,21 @@
-@import url("https://fonts.googleapis.com/css2?family=Merriweather:wght@300&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Merriweather:wght@300&display=swap");
 html,
 body {
   padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
-  max-width: 100vw;
-  overflow-x: hidden;
-  scroll-behavior: smooth;
-  font-family: 'Merriweather', Serif;
-  width: 100vw;
-  background-color: black;
-  color: #e2e2e2;
-  left: 0;
-  /*   -ms-scroll-snap-type: y proximity;
+  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
+    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+    max-width: 100vw;
+    overflow-x: hidden;
+    scroll-behavior: smooth;
+    font-family: 'Merriweather', Serif;
+    width: 100vw;
+    background-color: black;
+    color: #e2e2e2;
+    left: 0;
+ /*   -ms-scroll-snap-type: y proximity;
         scroll-snap-type: y proximity;
 */
-}
+      }
 
 a {
   color: inherit;
@@ -24,10 +23,11 @@ a {
 }
 
 * {
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
+  box-sizing: border-box;
 }
 
+@import url("https://fonts.googleapis.com/css2?family=Merriweather:wght@300&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Merriweather:wght@300&display=swap");
 html {
   max-width: 100vw;
   overflow-x: hidden;
@@ -41,7 +41,7 @@ html body {
   color: #e2e2e2;
   left: 0;
   -ms-scroll-snap-type: y proximity;
-  scroll-snap-type: y proximity;
+      scroll-snap-type: y proximity;
 }
 
 html header {
@@ -56,8 +56,7 @@ html header {
 
 html .nav-scrolled {
   background-color: #000000;
-  -webkit-box-shadow: 4px 4px 4px black;
-          box-shadow: 4px 4px 4px black;
+  box-shadow: 4px 4px 4px black;
 }
 
 html header nav {
@@ -69,17 +68,17 @@ html header nav ul {
   display: -ms-flexbox;
   display: flex;
   -webkit-box-align: center;
-  -ms-flex-align: center;
-  align-items: center;
+      -ms-flex-align: center;
+          align-items: center;
   -webkit-box-pack: space-evenly;
-  -ms-flex-pack: space-evenly;
-  justify-content: space-evenly;
+      -ms-flex-pack: space-evenly;
+          justify-content: space-evenly;
   height: 3rem;
   margin: 0;
   -webkit-box-orient: horizontal;
   -webkit-box-direction: normal;
-  -ms-flex-direction: row;
-  flex-direction: row;
+      -ms-flex-direction: row;
+          flex-direction: row;
   top: 0;
   left: 0;
 }
@@ -92,7 +91,6 @@ html header nav ul li {
 }
 
 html header nav ul li:hover {
-  -webkit-transition: 0.2s;
   transition: 0.2s;
   opacity: 1;
   color: #A6A486;
@@ -120,7 +118,7 @@ html header nav ul li a {
 
 html main {
   -ms-scroll-snap-type: y mandatory;
-  scroll-snap-type: y mandatory;
+      scroll-snap-type: y mandatory;
   position: absolute;
   left: 0;
 }
@@ -131,8 +129,8 @@ html main .backgroundVideos {
   display: -ms-flexbox;
   display: flex;
   -webkit-box-pack: center;
-  -ms-flex-pack: center;
-  justify-content: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   margin-left: -5vw;
 }
 
@@ -142,7 +140,7 @@ html main .backgroundVideos .desktopBackground {
   margin: 0;
   opacity: 0.8;
   -webkit-filter: brightness(0.7);
-  filter: brightness(0.7);
+          filter: brightness(0.7);
 }
 
 html main .backgroundVideos .mobileBackground {
@@ -160,22 +158,22 @@ html main .home {
   display: -ms-flexbox;
   display: flex;
   -ms-flex-wrap: wrap;
-  flex-wrap: wrap;
+      flex-wrap: wrap;
   -webkit-box-pack: center;
-  -ms-flex-pack: center;
-  justify-content: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   -webkit-box-align: start;
-  -ms-flex-align: start;
-  align-items: flex-start;
+      -ms-flex-align: start;
+          align-items: flex-start;
   background-color: #59021244;
   left: 0;
   margin: 0;
   color: #e2e2e2;
   -webkit-filter: drop-shadow(1px 1px 1px black);
-  filter: drop-shadow(1px 1px 1px black);
-}
-
-html main .home h1 {
+          filter: drop-shadow(1px 1px 1px black);
+        }
+        
+        html main .home h1 {
   font-weight: lighter;
   margin: 8vh 0px 0px 0px;
   font-size: 4rem;
@@ -183,9 +181,9 @@ html main .home h1 {
   opacity: 1;
 }
 
-html main .home p {
-  font-size: 1.5em;
-  padding: 0px 10vw 0px 10vw;
+html main .home p{
+font-size: 1.5em;
+padding:0px 10vw 0px 10vw;
 }
 
 html main .home .container {
@@ -194,8 +192,8 @@ html main .home .container {
   display: flex;
   width: 100vw;
   -webkit-box-pack: center;
-  -ms-flex-pack: center;
-  justify-content: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   margin: 0%;
 }
 
@@ -211,7 +209,7 @@ html main .home .container p {
   display: -ms-flexbox;
   display: flex;
   -ms-flex-negative: 2;
-  flex-shrink: 2;
+      flex-shrink: 2;
   font-size: 1rem;
 }
 
@@ -235,16 +233,16 @@ html main .home .externalLinks {
   display: flex;
   padding: 0;
   -ms-flex-preferred-size: 100%;
-  flex-basis: 100%;
+      flex-basis: 100%;
   width: 60%;
   -webkit-box-orient: horizontal;
   -webkit-box-direction: normal;
-  -ms-flex-direction: row;
-  flex-direction: row;
+      -ms-flex-direction: row;
+          flex-direction: row;
   -webkit-box-pack: space-evenly;
-  -ms-flex-pack: space-evenly;
-  justify-content: space-evenly;
-  margin: 3vh 0vw 3vh 0vw;
+      -ms-flex-pack: space-evenly;
+          justify-content: space-evenly;
+          margin: 3vh 0vw 3vh 0vw;
 }
 
 html main .home .externalLinks a {
@@ -255,12 +253,12 @@ html main .home .externalLinks a {
 
 html main .home .externalLinks a img {
   -ms-flex-negative: 2;
-  flex-shrink: 2;
+      flex-shrink: 2;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   -webkit-filter: drop-shadow(1px 1px 1px black);
-  filter: drop-shadow(1px 1px 1px black);
+          filter: drop-shadow(1px 1px 1px black);
   min-width: 3rem;
   opacity: 0.7;
 }
@@ -309,8 +307,8 @@ html main .live #showContainer .showDetails .show table {
   display: -ms-flexbox;
   display: flex;
   -webkit-box-align: center;
-  -ms-flex-align: center;
-  align-items: center;
+      -ms-flex-align: center;
+          align-items: center;
   background: #A6A486;
   color: #035385;
   border: 1px solid black;
@@ -330,7 +328,7 @@ html main .live img {
   margin: auto;
   margin-bottom: 50px;
   -webkit-box-shadow: 1px 1px 1px black;
-  box-shadow: 1px 1px 1px black;
+          box-shadow: 1px 1px 1px black;
   border-radius: 10px;
 }
 
@@ -341,18 +339,18 @@ html main .media {
   display: flex;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
-  -ms-flex-direction: column;
-  flex-direction: column;
+      -ms-flex-direction: column;
+          flex-direction: column;
   height: -webkit-fit-content;
   height: -moz-fit-content;
   height: fit-content;
   width: 100vw;
   -webkit-box-pack: center;
-  -ms-flex-pack: center;
-  justify-content: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   -webkit-box-align: center;
-  -ms-flex-align: center;
-  align-items: center;
+      -ms-flex-align: center;
+          align-items: center;
   text-align: center;
   padding-top: 3rem;
   font-size: 1.5rem;
@@ -368,8 +366,8 @@ html main .media h1 {
 
 html main .media .spotifyPlayer {
   -webkit-box-pack: center;
-  -ms-flex-pack: center;
-  justify-content: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   max-width: 60vw;
   margin: 0 20vw 0 20vw;
 }
@@ -381,7 +379,7 @@ html main .media img {
   margin-top: 2vh;
   margin-bottom: 50px;
   -webkit-box-shadow: 1px 1px 1px black;
-  box-shadow: 1px 1px 1px black;
+          box-shadow: 1px 1px 1px black;
   border-radius: 10px;
 }
 
@@ -391,15 +389,15 @@ html main .footer {
   display: none;
   position: relative;
   -webkit-box-align: center;
-  -ms-flex-align: center;
-  align-items: center;
+      -ms-flex-align: center;
+          align-items: center;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
-  -ms-flex-direction: column;
-  flex-direction: column;
+      -ms-flex-direction: column;
+          flex-direction: column;
   -webkit-box-pack: space-evenly;
-  -ms-flex-pack: space-evenly;
-  justify-content: space-evenly;
+      -ms-flex-pack: space-evenly;
+          justify-content: space-evenly;
   width: 100vw;
   padding: 2vw;
   text-align: left;
@@ -410,41 +408,37 @@ html main .footer {
 
 html main .footer form input {
   -webkit-box-pack: center;
-  -ms-flex-pack: center;
-  justify-content: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   -webkit-box-align: center;
-  -ms-flex-align: center;
-  align-items: center;
+      -ms-flex-align: center;
+          align-items: center;
   width: 90%;
-  -ms-flex-negative: 2;
-      flex-shrink: 2;
+  flex-shrink: 2;
 }
 
 html main .footer form button {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
   text-align: center;
   -webkit-box-align: center;
-  -ms-flex-align: center;
-  align-items: center;
+      -ms-flex-align: center;
+          align-items: center;
   -webkit-box-pack: center;
-  -ms-flex-pack: center;
-  justify-content: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   background-color: #0269a9;
   color: #e2e2e2;
   border: none;
-  -ms-flex-preferred-size: 100%;
-      flex-basis: 100%;
+  flex-basis: 100%;
   border-radius: 10px;
   padding: 1em;
   -webkit-box-shadow: 1px 1px 1px #014671;
-  box-shadow: 1px 1px 1px #014671;
+          box-shadow: 1px 1px 1px #014671;
 }
 
 html main .footer form button:hover {
   -webkit-filter: brightness(1.2);
-  filter: brightness(1.2);
+          filter: brightness(1.2);
 }
 
 @media only screen and (max-width: 800px) {
@@ -464,8 +458,8 @@ html main .footer form button:hover {
     display: -ms-flexbox;
     display: flex;
     -webkit-box-pack: space-evenly;
-    -ms-flex-pack: space-evenly;
-    justify-content: space-evenly;
+        -ms-flex-pack: space-evenly;
+            justify-content: space-evenly;
     max-width: 100vw;
     font-size: 1rem;
     min-height: 5vh;
@@ -478,23 +472,22 @@ html main .footer form button:hover {
   }
   html .nav-scrolled {
     background-color: #000000;
-    -webkit-box-shadow: 4px 4px 4px black;
-            box-shadow: 4px 4px 4px black;
+    box-shadow: 4px 4px 4px black;
   }
   .header nav ul {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
     -webkit-box-align: center;
-    -ms-flex-align: center;
-    align-items: center;
+        -ms-flex-align: center;
+            align-items: center;
     -webkit-box-pack: space-evenly;
-    -ms-flex-pack: space-evenly;
-    justify-content: space-evenly;
+        -ms-flex-pack: space-evenly;
+            justify-content: space-evenly;
     -webkit-box-orient: horizontal;
     -webkit-box-direction: normal;
-    -ms-flex-direction: row;
-    flex-direction: row;
+        -ms-flex-direction: row;
+            flex-direction: row;
     margin: 0;
     top: 0;
     left: 0;
@@ -523,8 +516,8 @@ html main .footer form button:hover {
     display: -ms-flexbox;
     display: flex;
     -webkit-box-pack: center;
-    -ms-flex-pack: center;
-    justify-content: center;
+        -ms-flex-pack: center;
+            justify-content: center;
   }
   main .backgroundVideos .desktopBackground {
     display: -webkit-box;
@@ -542,20 +535,20 @@ html main .footer form button:hover {
     display: -ms-flexbox;
     display: flex;
     -ms-flex-wrap: wrap;
-    flex-wrap: wrap;
+        flex-wrap: wrap;
     -webkit-box-pack: center;
-    -ms-flex-pack: center;
-    justify-content: center;
+        -ms-flex-pack: center;
+            justify-content: center;
     -webkit-box-align: center;
-    -ms-flex-align: center;
-    align-items: center;
+        -ms-flex-align: center;
+            align-items: center;
     background-color: #59021244;
     left: 0;
     margin: 0;
     padding: 0;
     color: #e2e2e2;
     -webkit-filter: drop-shadow(1px 1px 1px black);
-    filter: drop-shadow(1px 1px 1px black);
+            filter: drop-shadow(1px 1px 1px black);
     overflow: hidden;
   }
   main .home h1 {
@@ -564,7 +557,7 @@ html main .footer form button:hover {
     display: -ms-flexbox;
     display: flex;
     -ms-flex-negative: 5;
-    flex-shrink: 5;
+        flex-shrink: 5;
     font-size: 1rem;
     font-weight: 500;
     margin-bottom: 0%;
@@ -576,8 +569,8 @@ html main .footer form button:hover {
     display: flex;
     width: 100vw;
     -webkit-box-pack: center;
-    -ms-flex-pack: center;
-    justify-content: center;
+        -ms-flex-pack: center;
+            justify-content: center;
     margin: 0%;
   }
   main .home .container img {
@@ -587,7 +580,7 @@ html main .footer form button:hover {
   main .home p {
     text-align: center;
     -ms-flex-negative: 2;
-    flex-shrink: 2;
+        flex-shrink: 2;
     font-size: medium;
     margin-bottom: -2%;
   }
@@ -596,22 +589,22 @@ html main .footer form button:hover {
     display: -ms-flexbox;
     display: flex;
     -ms-flex-preferred-size: 100%;
-    flex-basis: 100%;
+        flex-basis: 100%;
     width: 60%;
     -webkit-box-orient: horizontal;
     -webkit-box-direction: normal;
-    -ms-flex-direction: row;
-    flex-direction: row;
+        -ms-flex-direction: row;
+            flex-direction: row;
     -webkit-box-pack: space-evenly;
-    -ms-flex-pack: space-evenly;
-    justify-content: space-evenly;
+        -ms-flex-pack: space-evenly;
+            justify-content: space-evenly;
   }
   main .externalLinks a img {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
     -webkit-filter: drop-shadow(1px 1px 1px black);
-    filter: drop-shadow(1px 1px 1px black);
+            filter: drop-shadow(1px 1px 1px black);
     max-width: 3rem;
     opacity: 0.7;
   }
@@ -653,8 +646,8 @@ html main .footer form button:hover {
     display: -ms-flexbox;
     display: flex;
     -webkit-box-align: center;
-    -ms-flex-align: center;
-    align-items: center;
+        -ms-flex-align: center;
+            align-items: center;
     background: #A6A486;
     color: #035385;
     border: 1px solid black;
@@ -668,7 +661,7 @@ html main .footer form button:hover {
     width: 80vw;
     margin: 0;
     -webkit-box-shadow: 1px 1px 1px black;
-    box-shadow: 1px 1px 1px black;
+            box-shadow: 1px 1px 1px black;
     border-radius: 10px;
   }
   main .media {
@@ -677,18 +670,18 @@ html main .footer form button:hover {
     display: flex;
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
-    -ms-flex-direction: column;
-    flex-direction: column;
+        -ms-flex-direction: column;
+            flex-direction: column;
     height: -webkit-fit-content;
     height: -moz-fit-content;
     height: fit-content;
     width: 100vw;
     -webkit-box-pack: center;
-    -ms-flex-pack: center;
-    justify-content: center;
+        -ms-flex-pack: center;
+            justify-content: center;
     -webkit-box-align: center;
-    -ms-flex-align: center;
-    align-items: center;
+        -ms-flex-align: center;
+            align-items: center;
     text-align: center;
     padding-top: 3rem;
     font-size: 1.5rem;
@@ -702,15 +695,15 @@ html main .footer form button:hover {
   }
   main .media .spotifyPlayer {
     -webkit-box-pack: center;
-    -ms-flex-pack: center;
-    justify-content: center;
+        -ms-flex-pack: center;
+            justify-content: center;
     max-width: 60vw;
     margin: 5vw 20vw 0 20vw;
   }
   main .media img {
     max-width: 80vw;
     -webkit-box-shadow: 1px 1px 1px black;
-    box-shadow: 1px 1px 1px black;
+            box-shadow: 1px 1px 1px black;
     border-radius: 10px;
   }
   main .footer {
@@ -719,15 +712,15 @@ html main .footer form button:hover {
     display: flex;
     position: relative;
     -webkit-box-align: center;
-    -ms-flex-align: center;
-    align-items: center;
+        -ms-flex-align: center;
+            align-items: center;
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
-    -ms-flex-direction: column;
-    flex-direction: column;
+        -ms-flex-direction: column;
+            flex-direction: column;
     -webkit-box-pack: space-evenly;
-    -ms-flex-pack: space-evenly;
-    justify-content: space-evenly;
+        -ms-flex-pack: space-evenly;
+            justify-content: space-evenly;
     width: 100vw;
     padding: 2vw;
     text-align: left;
@@ -737,27 +730,27 @@ html main .footer form button:hover {
   }
   main .footer form input {
     -webkit-box-pack: center;
-    -ms-flex-pack: center;
-    justify-content: center;
+        -ms-flex-pack: center;
+            justify-content: center;
     -webkit-box-align: center;
-    -ms-flex-align: center;
-    align-items: center;
+        -ms-flex-align: center;
+            align-items: center;
     width: 90%;
   }
   main .footer form button {
     -webkit-box-align: center;
-    -ms-flex-align: center;
-    align-items: center;
+        -ms-flex-align: center;
+            align-items: center;
     -webkit-box-pack: center;
-    -ms-flex-pack: center;
-    justify-content: center;
+        -ms-flex-pack: center;
+            justify-content: center;
     background-color: #0269a9;
     color: #e2e2e2;
     border: none;
     border-radius: 10px;
     padding: 0.5em;
     -webkit-box-shadow: 1px 1px 1px black;
-    box-shadow: 1px 1px 1px black;
+            box-shadow: 1px 1px 1px black;
   }
 }
-/*# sourceMappingURL=globals.css.map */
+/*# sourceMappingURL=index.css.map */
