--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -306,25 +306,28 @@ html main .live #showContainer .showDetails .show table {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  flex-direction: row;
+  flex-shrink: 1;
+  overflow-x: scroll;
   -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
   background: #A6A486;
   color: #035385;
   border: 1px solid black;
   border-radius: 20px;
   margin-bottom: 15px;
-  font-size: 1em;
 }
 
 html main .live #showContainer .showDetails .show table td {
-  width: 400px;
   font-size: 1rem;
+  height: 1em;
+  width: 40vw;
 }
 
 html main .live img {
   max-width: 50vw;
-  min-width: 425px;
+  min-width: 250px;
   margin: auto;
   margin-bottom: 50px;
   -webkit-box-shadow: 1px 1px 1px black;
@@ -374,7 +377,7 @@ html main .media .spotifyPlayer {
 
 html main .media img {
   max-width: 40vw;
-  min-width: 400px;
+  min-width: 250px;
   margin: auto;
   margin-top: 2vh;
   margin-bottom: 50px;
@@ -558,7 +561,7 @@ html main .footer form button:hover {
     display: flex;
     -ms-flex-negative: 5;
         flex-shrink: 5;
-    font-size: 1rem;
+    font-size: 3rem !important; 
     font-weight: 500;
     margin-bottom: 0%;
   }
@@ -579,6 +582,7 @@ html main .footer form button:hover {
   }
   main .home p {
     text-align: center;
+    font-size: smaller !important;
     -ms-flex-negative: 2;
         flex-shrink: 2;
     font-size: medium;
@@ -599,8 +603,12 @@ html main .footer form button:hover {
         -ms-flex-pack: space-evenly;
             justify-content: space-evenly;
   }
+  main .home .presaveLink{
+    font-size: 1rem !important;
+  }
   main .externalLinks a img {
     display: -webkit-box;
+    font-size: 2rem !important;
     display: -ms-flexbox;
     display: flex;
     -webkit-filter: drop-shadow(1px 1px 1px black);
@@ -655,6 +663,7 @@ html main .footer form button:hover {
     margin-bottom: 15px;
   }
   main .live #showContainer .showDetails .show table td {
+    font-size: 3vw !important;
     width: 400px;
   }
   main .live img {
